# ringgnn

./: .gitignore  README.md  pyproject.toml
ringgnn/: collating_graphormer.py  config.py  model.py  modeling_graphormer.py  types.py  utils.py
ringgnn/ringconv/: layer.py
ringsage/: schemas.py  utils.py
ringsage/ringsageconv/: cycle_detection.py  layer.py
